<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f8f8"
    android:orientation="vertical" >

    <include layout="@layout/activity_common_title"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="#F1F5F6" />

    <RelativeLayout
        android:id="@+id/rl_user_name"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/white" >

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:cursorVisible="true"
            android:gravity="center_vertical|left"
            android:hint="@string/please_enter_phone_number"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:paddingRight="30dp"
            android:singleLine="true"
            android:textColor="#202020"
            android:textColorHint="#709c9c9c"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:id="@+id/view_user_name_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E4E4E4" />

    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/white" >

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:cursorVisible="true"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical|left"
            android:hint="@string/please_enteryour_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColor="#202020"
            android:textColorHint="#709c9c9c"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:textSize="16sp" />

        <View
            android:id="@+id/view_password_divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/et_password"
            android:layout_marginTop="10dp"
            android:background="#E1E1E1" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_remind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/reminder_blue"
        android:textSize="12sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_buttton_bg"
        android:text="@string/loading"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/rl_forget_password_and_regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/bt_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="6dp"
            android:background="#00000000"
            android:text="@string/forgetpassword"
            android:textColor="#3867aa"
            android:textSize="12sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/self_test"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="210dp"
        android:background="#F5F5f3"
        android:text="password"
        android:visibility="gone"
        android:textColor="#F1F5F6" />

</LinearLayout>