<?xml version="1.0" encoding="utf-8"?>
<com.point.april.widget.KeyboardLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <FrameLayout
        android:id="@+id/fl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <include layout="@layout/activity_common_title" />

            <TextView
                android:id="@+id/top_tips"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="注意，当前网络不可用！！！"
                android:gravity="center"
                android:textColor="#FF4040"
                android:background="#FFEC8B"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="18sp"/>

            <com.point.april.ui.view.waterdroplistview.WaterDropListView
                android:id="@+id/lv_commm_record"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="#f3f3f3"
                android:dividerHeight="7dp"
                android:fadingEdge="none"
                android:fastScrollEnabled="false"
                android:footerDividersEnabled="false"
                android:headerDividersEnabled="false"
                android:smoothScrollbar="true">
            </com.point.april.ui.view.waterdroplistview.WaterDropListView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_edit_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="6" >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="表情" />

            <EditText
                android:id="@+id/et_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <Button
                android:id="@+id/bt_send_msg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/send_msg" />
        </LinearLayout>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/rl_warranty"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/img_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/icon_warranty_record"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tv_remind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/no_news_record"
            android:textColor="@color/text_color_gray"
            android:textSize="16sp" />
    </RelativeLayout>

</com.point.april.widget.KeyboardLayout>